buildscript {
    repositories {
        maven { url = 'https://maven.minecraftforge.net' }
		maven { url = 'https://maven.parchmentmc.org' }
        mavenCentral()
    }
    dependencies {
        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.+', changing: true
		classpath group: 'org.parchmentmc', name: 'librarian', version: '1.+'
    }
}

apply plugin: 'net.minecraftforge.gradle'
apply plugin: 'org.parchmentmc.librarian.forgegradle'

apply plugin: 'eclipse'
apply plugin: 'maven-publish'

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

repositories {
    mavenCentral()
    maven { url 'https://maven.blamejared.com' }
    maven { url 'https://maven.theillusivec4.top/' }
}

group = 'uk.kihira'
archivesBaseName = 'Tails'
version = '1.18.1-1.0.0'

dependencies {
    minecraft 'net.minecraftforge:forge:1.18.1-39.0.66'

    //compileOnly fg.deobf('vazkii.botania:Botania:1.16.5-419:api')
    //runtimeOnly fg.deobf('vazkii.botania:Botania:1.16.5-419')
    //runtimeOnly fg.deobf('vazkii.patchouli:Patchouli:1.16.4-53.2')
    //runtimeOnly fg.deobf('top.theillusivec4.curios:curios-forge:1.16.5-4.0.5.3')
}

minecraft {
    mappings channel: 'parchment', version: '2021.12.19-1.18.1'
	accessTransformer = file("$rootDir/src/main/resources/META-INF/accesstransformer.cfg")

    runs {
        client {
            workingDirectory project.file('run')

            property 'mixin.env.remapRefMap', 'true'
            property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"

            mods {
                tails {
                    source sourceSets.main
                }
            }
        }

        server {
            workingDirectory project.file('run/server')

            mods {
                tails {
                    source sourceSets.main
                }
            }
        }
    }
}

jar {
    manifest {
        attributes([
            'Specification-Title': 'Tails',
            'Specification-Vendor': 'Kihira',
            'Specification-Version': '1',
            'Implementation-Title': project.name,
            'Implementation-Version': "${version}",
            'Implementation-Vendor' : 'EnderTurret',
            'Implementation-Timestamp': new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
        ])
    }
}

jar.finalizedBy('reobfJar')

task sourcesJar(type: Jar, dependsOn: classes) {
    classifier = 'sources'
    from sourceSets.main.allSource
}

artifacts {
    archives sourcesJar
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            artifact jar
            artifact sourcesJar

            pom {
                name = 'Tails'
                description = 'For all your taily needs.'
            }

            pom.withXml {
                asNode().dependencies.dependency.each { dep ->
                    if (dep.artifactId.last().value().last().contains('forge'))
                        dep.parent().remove(dep)
                }
            }
        }
    }
}